# wushi-my-diet

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: auth.py  challenge.py  foods.py  map.py  profile.py  recipe.py
apps/api/app/core/: __init__.py  config.py  deps.py  security.py  wechat.py
apps/api/app/db/: __init__.py  base.py  init_db.py  seed.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 0001_initial.py  0002_challenge_step_severity.py  0003_t2_columns.py  0004_t3_phone.py  __init__.py
apps/api/app/models/: __init__.py  challenge.py  condition.py  food.py  meal.py  profile.py  symptom.py  tolerance.py  user.py
apps/api/app/schemas/: __init__.py  auth.py  challenge.py  food.py  map.py  meal.py  profile.py  recipe.py  tolerance.py
apps/api/app/services/: __init__.py  safety.py
apps/api/app/services/burden/: __init__.py  fodmap.py  gl.py
apps/api/app/services/conflict/: __init__.py  engine.py
apps/api/app/services/recipe/: __init__.py  llm.py  template.py
apps/api/app/services/tolerance/: __init__.py  model.py  prior.py  update.py
apps/api/deploy/: README.md  serverless.yml
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_burden.py  test_challenge_api.py  test_map_api.py  test_recipe_api.py  test_t5_auth_foods.py  test_tolerance.py
deploy/: docker-compose.yml
docs/: class-diagram.mermaid  prd.md  (+2 more)
(+47 files in other folders)
